Added hero section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
+<h2>Hero section</h2>
+    <img src="C:/Users/ayaan/OneDrive/Desktop/Eren_meets_Yeagerists.jpg" alt="Eren Jaeger" width="300">
 <footer>
   <p>&copy; 2025 My Website</p>
 </footer>
