--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 </nav>
 <h2>Hero section</h2>
     <img src="C:/Users/ayaan/OneDrive/Desktop/Eren_meets_Yeagerists.jpg" alt="Eren Jaeger" width="300">
+<h2>Contact Us</h2>
+<form action="#" method="POST">
+  <label>Name:</label><br>
+  <input type="text" name="name" required><br><br>
+
+  <label>Email:</label><br>
+  <input type="email" name="email" required><br><br>
+
+  <label>Message:</label><br>
+  <textarea name="message" rows="4" required></textarea><br><br>
+
+  <button type="submit">Send</button>
+</form>
 <footer>
   <p>&copy; 2025 My Website</p>
 </footer>
