Added Testimonials section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <button type="submit">Send</button>
 </form>
+<h2>Testimonials section</h2>
 <footer>
   <p>&copy; 2025 My Website</p>
 </footer>
